# rsw

./: Cargo.toml  README.md  log4rs.yaml
src/: cli.yml  main.rs
src/parse/: mod.rs
src/template/: mod.rs
src/util/: mod.rs
