[package]
name = "rsw"
version = "0.1.0"
authors = ["liuxinquan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "0.2"
yaml-rust = "0.3"
comrak = "0.2.5"
clap = {version="2.29.0", features=["yaml"]}
log = "0.4.8"
log4rs = "1.0.0"

[profile.release]
lto = true
